--- a/css/style.css
+++ b/css/style.css
@@ -16,4 +16,24 @@ header{
 #sony-logo{
     width: 100px;
 }
+
+
+/************
+MAIN 
+*************/
+#jumbotron{
+    padding-top: 120px;
+}
+
+.bg-returnal{
+    background-image: url(../img/jumbo-bg.png);
+    height: 675px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.my-row{
+    height: 675px;
+}
 /* Utils */
