--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,12 @@ MAIN
     background-size: cover;
 }
 
+.card-rounded{
+    height: 100px;
+}
+
+
+/* Utils */
 .my-row{
     height: 675px;
 }
-/* Utils */
