--- a/css/style.css
+++ b/css/style.css
@@ -27,21 +27,25 @@ MAIN
 
 .bg-returnal{
     background-image: url(../img/jumbo-bg.png);
-    height: 675px;
+    height: 500px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-/* .card-rounded{
-    height: 100px;
-} */
-
 .play-5{
     width: 95%;
 }
 
+.bg-it-take-two{
+    background-image: url(../img/it-takes-two-hero-banner-desktop.jpg);
+    min-height: 500px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 /* Utils */
 .my-row{
-    height: 675px;
+    height: 500px;
 }
