Added section playstation-now

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,10 @@ MAIN
     background-color: var(--grey);
 }
 
+.bg-dark-blue{
+    background-color: var(--darkblue);
+}
+
 /* Utils */
 .my-row{
     height: 500px;
